--- a/Bai2_ChuongTrinhChaoHoi.html
+++ b/Bai2_ChuongTrinhChaoHoi.html
@@ -50,6 +50,6 @@
          integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
          crossorigin="anonymous"
       ></script>
-      <script src="./index.js"></script>
+      <script src="./Bai2_ChuongTrinhChaoHoi.js"></script>
    </body>
 </html>
