--- a/Bai3_DemSoChanLe.html
+++ b/Bai3_DemSoChanLe.html
@@ -22,25 +22,39 @@
          <h1 class="text-center my-5">Đếm số chẵn lẻ</h1>
          <div class="row my-3 justify-content-center">
             <div class="col-auto">
-               <input id="num1" type="number" placeholder="Hãy nhập 1 số nguyên" />
+               <input
+                  id="num1"
+                  type="number"
+                  placeholder="Hãy nhập 1 số nguyên"
+               />
             </div>
 
             <div class="col-auto">
-               <input id="num2" type="number" placeholder="Hãy nhập 1 số nguyên" />
+               <input
+                  id="num2"
+                  type="number"
+                  placeholder="Hãy nhập 1 số nguyên"
+               />
             </div>
 
             <div class="col-auto">
-               <input id="num3" type="number" placeholder="Hãy nhập 1 số nguyên" />
+               <input
+                  id="num3"
+                  type="number"
+                  placeholder="Hãy nhập 1 số nguyên"
+               />
             </div>
          </div>
 
          <div class="text-center">
-            <button class="btn btn-primary rounded-pill px-5" onclick="count()">ĐẾM</button>
+            <button class="btn btn-primary rounded-pill px-5" onclick="count()">
+               ĐẾM
+            </button>
          </div>
 
-				 <div class="text-center my-3">
-					 <p id="res" class="rounded border bg-light">Kết quả</p>
-				 </div>
+         <div class="text-center my-3">
+            <p id="res" class="rounded border bg-light fs-5">Kết quả</p>
+         </div>
       </div>
 
       <!-- Bootstrap JavaScript Libraries -->
