--- a/Bai1_SoNguyenTangDan.html
+++ b/Bai1_SoNguyenTangDan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>Bài tập Javascrip Buổi 4</title>
+      <title>Số nguyên tăng dần</title>
       <!-- Required meta tags -->
       <meta charset="utf-8" />
       <meta
