--- a/Bai3_DemSoChanLe.html
+++ b/Bai3_DemSoChanLe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>Title</title>
+      <title>Đếm số chẵn lẻ</title>
       <!-- Required meta tags -->
       <meta charset="utf-8" />
       <meta
