--- a/Bai4_DoanHinhTamGiac.html
+++ b/Bai4_DoanHinhTamGiac.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>Title</title>
+      <title>Đoán hình tam giác</title>
       <!-- Required meta tags -->
       <meta charset="utf-8" />
       <meta
